<resources>
    <string name="app_name">Bluejack Kos</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="phone">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="must_be_filled">Field must be filled</string>
    <string name="tos_error">You must agree to the terms and conditions</string>
    <string name="password_does_not_match">Password doesn\'t match</string>
    <string name="password_requirement_not_met">Password must be longer than 6 characters and contain at least 1 lowercase letter, 1 uppercase letter and 1 digit.</string>
    <string name="username_requirement_not_met">Username must be between 3 and 25 characters</string>
    <string name="username_or_password_wrong">Username or password is wrong</string>
    <string name="no_users_registered">No users registered</string>
    <string name="username_exists">Username already used</string>
    <string name="sign_up_successful">Sign up successful, please Login</string>
    <string name="recommendations">Recommendations</string>
    <string name="kost_name">Kost Name</string>
    <string name="wifi_bathroom_toilet">WiFi, Bathroom, Toilet</string>
    <string name="rp12000_month">Rp12000 / month</string>
    <string name="logout">Logout</string>
    <string name="booking_transaction_form">Booking Transaction Form</string>
    <string name="book_this_kost">Book this kost</string>
    <string name="description">Description</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="already_booked">This kost has already been booked.</string>
    <string name="book_date">Book date</string>
    <string name="booking_message">Hi, %1$s. You\'re currently booking <b>%2$s</b>. Please choose your date below.</string>
    <string name="book_done">Your kost is successfully booked.</string>
    <string name="bookings">Your bookings</string>
    <string name="no_transactions">No booking transactions</string>
    <string name="cancel">Cancel</string>
    <string name="really_cancel">Do you want to cancel this booking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phone_length_error">Phone number must be 10-12 characters long.</string>
    <string name="view_location_kost">View Location Kost</string>
</resources>
