<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.KostDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/app_name"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_below="@id/appBarLayout"
        android:id="@+id/kostImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/kost2"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kostImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/kostName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kost_name"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/kostFacilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_bathroom_toilet"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/kostPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp12000_month"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/kostDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/kostLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/kostLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBook"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_this_kost"/>

</RelativeLayout>