<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/kostCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/kostName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kost_name"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="18sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/kostFacilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_bathroom_toilet"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/kostPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp12000_month"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>